--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
   </ol> </div>
 
   <textarea placeholder="Dejame un comentario" style="resize:none" cols="80" rows="5"> </textarea>
+  < form>
+  < textarea name="comment" rows=5 cols=40>
+  Introduzca aquí sus comentarios
+  </textarea>
+  </form>                                                                                   
   
   <table align="center">
   <tr>
