--- a/index.html
+++ b/index.html
@@ -91,16 +91,11 @@
   <div align="left> <ol type="A"> POR QUE VER MOMOS ES BUENO
                             <li>atraes a las elfas</li>
                             <li>el facebook te cambia de color</li>
-                            <li>por que ver memes... es chido!</li>
+                            <li>por que ver memes... es chidodsfsdgfsdfsdfsdfsdfsdfsdfsdfdsf!</li>
   </ol> </div>
 
   <textarea placeholder="Dejame un comentario" style="resize:none" cols="80" rows="5"> </textarea>
-  <form>
-  <textarea name="comment" rows=5 cols=40>
-  Introduzca aquí sus comentarios
-  </textarea>
-  </form>                                                                                   
-  
+                                                                               
   <table align="center">
   <tr>
   <td style="background-image: url('memes/send.png'); background-position:center; background-repeat:no-repeat; width="10" height="20"> <center> <a href="https://es.memedroid.com/memes/tag/dime+que+no+es+cierto"target="_blank">  <img src= "memes/no es cierto.png" height="200" width="auto" draggable="false"></a> <br> <font size="5" color="white" face="palatino linotype">No es cierto...</center> </td></br> 
