--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
  <body>
   <div id="header">
    <ul class="nav">
-    <li><a href="https://sebastianbarcenas.github.io/miprimerpagina/">inicio</a>
+    <li><a href="index.html">inicio</a>
      <ul>
       <li><a href="mailto:drackmoddy2001@gmail.com" target="_blank">Contacto</a></li>
       <li><a href="https://www.nobbot.com/pantallas/cultura-meme-entender/https://www.nobbot.com/pantallas/cultura-meme-entender/"target="_blank">Nosotros</a></li>
